--- a/src/main/resources/config/datasource.properties
+++ b/src/main/resources/config/datasource.properties
@@ -5,7 +5,7 @@ datasource.default.driver-class-name = com.mysql.jdbc.Driver
 datasource.default.username=origami
 datasource.default.password=origami
 #jdbc.pool
-datasource.default.filters=wall
+datasource.default.filters=stat,wall
 datasource.default.initialSize=1
 datasource.default.maxActive=20
 datasource.default.minIdle=10
