--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	 <!--本Project識別-->
 	<groupId>com.dev</groupId>
 	<artifactId>sbframework</artifactId>
-	<version>0.1</version>
+	<version>1.0</version>
 	<!--表示打包Project的型態,可能為Jar、war、ear或pom，若是使用了android 則為apk-->
 	<packaging>war</packaging>
 	<!--以下是給工具看的,主要是本Project的資訊-->
@@ -35,14 +35,17 @@
 		<spring.boot.version>1.5.7.RELEASE</spring.boot.version>
 		<mybatis.spring.boot.version>1.3.0</mybatis.spring.boot.version>
 		<druid.spring.boot.version>1.1.2</druid.spring.boot.version>
+		<redis.spring.boot.version>1.4.7.RELEASE</redis.spring.boot.version>
 		<poi.version>3.15</poi.version>
 		<cxf.version>3.2.0</cxf.version>
 	</properties>
 	
 	<dependencies>
-		<!-- spring-boot WEB支持
-		-->
+		<!-- spring-boot WEB支持 -->
 		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-web</artifactId></dependency>
+		<!-- spring-boot-security 
+		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-security</artifactId></dependency>
+		-->
 		<!-- spring-boot thymeleaf 
 		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-thymeleaf</artifactId></dependency>
 		-->
@@ -63,6 +66,8 @@
 		<!-- spring-boot atomikos 分布式事务 -->
 		<dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-jta-atomikos</artifactId></dependency>
 	    <dependency><groupId>com.atomikos</groupId><artifactId>transactions-osgi</artifactId><version>3.9.3</version></dependency>
+        <!-- Spring Boot Reids -->
+        <dependency><groupId>org.springframework.boot</groupId><artifactId>spring-boot-starter-redis</artifactId><version>${redis.spring.boot.version}</version></dependency>
 		<!-- db driver myql-->
 		<dependency><groupId>mysql</groupId><artifactId>mysql-connector-java</artifactId></dependency>
 		<!-- db driver oracle
