--- a/src/main/resources/config/application.properties
+++ b/src/main/resources/config/application.properties
@@ -1,19 +1,40 @@
-##
+## 内嵌tomcat配置
 server.port=9090
 server.contextPath=/sbframework
 server.jsp-servlet.init-parameters.development=true
-##
+
+## jsp映射配置
 spring.mvc.view.prefix=/WEB-INF/view
 #spring.mvc.view.suffix=.jsp
 
-## SQL Log 
+## SQL Log 配置
 logging.level.org.springframework=WARN
 logging.level.com.admin=TRACE
 logging.file=logs/sql.log
 
-##nav.menu.search.api
+## Redis 配置
+## Redis数据库索引（默认为0）
+spring.redis.database=10
+## Redis服务器地址
+spring.redis.host=127.0.0.1
+## Redis服务器连接端口
+spring.redis.port=6379
+## Redis服务器连接密码（默认为空）
+spring.redis.password=
+## 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+## 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+## 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+## 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+## 连接超时时间（毫秒）
+spring.redis.timeout=0
+
+## nav.menu.search.api
 nav.menu.search.api=http://localhost:8585/api/getMenuByUserId.action
 
-##image upload path
+## image upload path
 image.upload.path=/app/origami/upload/images/
 image.path=http://localhost:8787/origami/images/
